# bisq-cli

./: .gitignore  Cargo.toml  Makefile  gen-proto.rs
ci/: pipeline.yml  repipe  settings.yml
ci/images/pipeline/: Dockerfile
ci/tasks/: test-e2e.sh
proto/: grpc.proto  pb.proto
scripts/: gen-proto
src/: bisq.rs  cli.rs  commands.rs  lib.rs  main.rs
test/integration/: daemon.bats  helpers.bash
