[package]
name = "bisq-cli"
version = "0.1.0"
authors = ["bodymindarts <bodymindarts@online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.29"
grpcio = "0.5.0-alpha.5"
protobuf = "2"

[dependencies.clap]
version = "2.33.0"
features = [ "suggestions", "color", "unstable"]
